fixed z index issue on mobile links

--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,7 @@ p {
   top: 90px;
   background-color: rgba(255, 255, 255, 0.95);
   display: none;
+  z-index: 1000;
 }
 
 .mobile-nav-links ul li a {
